# beauty-pipeline

./: .env.example  .gitignore  .gitleaksignore  PLAN.md  README.md  RULES.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
airflow/: Dockerfile  README.md  docker-compose.yml
airflow/dags/: beauty_daily.py
api/: Dockerfile  README.md  __init__.py  main.py  requirements.txt
dbt/: .user.yml  README.md  dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: _models.yml  dashboard_events_daily.sql  recommendations.sql
dbt/models/staging/: _models.yml  _sources.yml  stg_events.sql  stg_ingredient.sql  stg_manufacturer.sql  stg_products.sql  stg_regulation.sql
docs/: README.md  dashboard.md  greenfield-playbook.md  iam.md  project-tour.md  teardown-plan.md
docs/adr/: 001-event-pipeline.md
docs/labs/: 001-dataproc-serverless.md  002-gke-autopilot.md
docs/setup/: 00-bootstrap.md
docs/troubleshooting/: 001-airflow-stale-pid.md
docs/weekly/: 2026-07-06.md
ingestion/: README.md  __init__.py  config.py  datago.py  probe.py  sources.py
ingestion/batch/: __init__.py  fetch_to_gcs.py  load_to_bq.py
ingestion/streaming/: __init__.py  event_generator.py  generate_catalog.py
labs/dataproc/: regulated_origin_job.py
labs/gke/: deployment.yaml
terraform/: README.md  bigquery.tf  cloudrun.tf  iam.tf  monitoring.tf  outputs.tf  pubsub.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf  versions.tf  wif.tf
tests/: test_api.py  test_datago.py  test_event_generator.py  test_fetch_to_gcs.py  test_load_to_bq.py
writing/: README.md
writing/blog/: 001-project-kickoff.md  002-lake-to-warehouse-dbt.md  003-airflow-phase1-complete.md  004-streaming-recommendation-api.md  005-devsecops.md  _template.md
writing/resume/: 자소서_소재은행.md  포트폴리오_소개.md
