# ─────────────────────────────────────────────────────────────
# 파일: pyproject.toml
# 역할: 파이썬 프로젝트의 "명세서" — 프로젝트 정보, 의존 라이브러리, 도구 설정을 한 곳에.
# 왜: requirements.txt 여러 개로 흩어지는 대신 표준(PEP 621) 한 파일로 관리.
#     uv가 이 파일을 읽어 .venv 생성 + uv.lock(정확한 버전 고정)을 만든다.
# 사용: `uv sync` (의존성 설치) / `uv run python -m ...` (가상환경 안에서 실행)
# ─────────────────────────────────────────────────────────────

[project]
name = "beauty-pipeline"
version = "0.1.0"
description = "피부타입별 화장품 추천 데이터 플랫폼 — 수집/처리 파이프라인"
requires-python = ">=3.12,<3.13" # 3.12 고정(RULES.md) — 로컬/CI/배포 이미지의 런타임 통일

# 런타임 의존성: 실제 파이프라인 코드가 import 하는 것만 최소로
dependencies = [
    "requests>=2.32",     # HTTP 클라이언트 — 공공데이터 API 호출
    "python-dotenv>=1.0", # .env 파일을 환경변수로 로드 (시크릿을 코드 밖으로)
    # 하한을 느슨하게 유지 — dbt-bigquery가 요구하는 범위와 겹치게 한다.
    # (정확한 설치 버전은 uv.lock이 고정하므로 재현성은 유지됨)
    "google-cloud-storage>=2.16",
    "tzdata>=2024.1",
    "google-cloud-bigquery>=3.25",
    "dbt-bigquery>=1.9",
    "google-cloud-pubsub>=2.39.0",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.2",
    "google-cloud-secret-manager>=2.29.0",
]

# 개발 의존성: 개발/CI에서만 쓰는 도구 (배포 이미지에는 안 들어감)
[dependency-groups]
dev = [
    "bandit[toml]>=1.9.4",
    "pytest>=8.0", # 단위 테스트
    "ruff>=0.8",   # 린터 + 포매터 (RULES.md 3장)
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F=기본 오류, I=import 정렬, B=버그 유발 패턴, UP=구식 문법 현대화
select = ["E", "F", "I", "B", "UP"]

[tool.bandit]
# B311(random): 합성 데이터 생성용 — 암호/토큰 용도 아님. 시크릿 생성 필요 시 secrets 모듈 사용.
# B608(SQL 조립): f-string에 들어가는 값은 신뢰된 설정(프로젝트 ID/테이블 경로)뿐이고,
#   사용자 입력은 전부 파라미터 바인딩(api/main.py 참조). SQL은 테이블명을 파라미터로 받을 수
#   없어 경로 삽입이 불가피. 여러 줄 f-string엔 #nosec이 안 붙는 Bandit 한계로 전역 제외하되,
#   "새 쿼리에서 사용자 입력은 반드시 바인딩" 규칙은 코드리뷰로 지킨다 (RULES.md 4장).
skips = ["B311", "B608"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# 프로젝트 루트를 import 경로에 추가 — tests/에서 `from ingestion...` 이 되게 한다
pythonpath = ["."]
